# networkBMA

./: .Rbuildignore  DESCRIPTION  NAMESPACE  NEWS  config.status  configure  configure.ac
R/: fastBMA.R  fastBMAcontrol.R  zzz.R
inst/: CITATION
inst/doc/: networkBMA.R  networkBMA.Rnw
man/: fastBMAcontrol.Rd  fastgControl.Rd  writeEdges.Rd
src/: Makevars  Makevars.in  Makevars.win  ScanBMA_full.cpp  bmaNoMPI.hpp  fastBMA.h  fastBMA.hpp  fastBMAR.cpp  symbols.rds
src/include/: openblas_config.h
